# uxar

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  llms.txt
uxar/: Cargo.toml  build.rs
uxar-bins/: Cargo.toml
uxar-macros/: Cargo.toml
uxar-macros/examples/: migration_evaluation.md  schemable_demo.rs
uxar-macros/src/: assets.rs  bindable.rs  bitrole.rs  bundle.rs  bundlepart.rs  bundlepart_tests.rs  cron.rs  embed.rs  filterable.rs  flow.rs  lib.rs  model.rs  models.rs  openapi.rs  periodic.rs  pgnotify.rs  routable.rs  routable_tests.rs  route.rs  scannable.rs  schemable.rs  service.rs  signal.rs  task.rs  validatable.rs  validate.rs  viewable.rs
uxar-macros/src/common/: mod.rs  type_utils.rs  where_bounds.rs
uxar-macros/tests/: schemable_validation.rs
uxar/examples/: api_error_demo.rs  bundle_macro.rs  bundle_with_tags.rs  error_handling_demo.rs  impl_block_routes.rs  model_demo.rs  notes.rs  recordable_demo.rs  route_standalone.rs  schema_name_test.rs  test_route_macro.rs  validatable_demo.rs
uxar/examples/cmp/: notes_drf.py  notes_fastapi.py
uxar/src/: app.rs  assets.rs  auth.rs  beacon.rs  bundles.rs  channels.rs  cli.rs  cmd.rs  commands.rs  conf.rs  cron.rs  data.rs  db.rs  debounce.rs  defer.rs  embed.rs  emitters.rs  errors.rs  flows.rs  host.rs  jsql.rs  layers.rs  lib.rs  logging.rs  main.rs  migrations.rs  notifiers.rs  roles.rs  routes.rs  schedulers.rs  services.rs  signals.rs  site.rs  tasks.rs  templates.rs  testing.rs  testing_tests.rs  validation.rs  validators.rs  views.rs  (+3 more)
uxar/src/admin/: mod.rs  routes.rs  stats.rs
uxar/src/apidocs/: apidoc.rs  mod.rs  schema.rs
uxar/src/bundles/: error.rs  mod.rs  openapi.rs  part.rs
uxar/src/callables/: callables.rs  extractors.rs  mod.rs  operations.rs  patch.rs  specs.rs  tests.rs
uxar/src/db/: argvalue.rs  commons.rs  executor.rs  interfaces.rs  migrations.rs  mock.rs  mod.rs  models.rs  placeholders.rs  query.rs  scopes.rs
uxar/src/routes/: methods.rs  middleware.rs  mod.rs  types.rs
uxar/src/schemables/: apidoc.rs  base.rs  fragments.rs  mod.rs  primitives.rs  schema.rs
uxar/src/signal_sources/: cron.rs  interval.rs  mod.rs  pgnotify.rs
uxar/src/tasks/: indentity.rs  mod.rs  store.rs  tasks.rs
uxar/tests/: bindable_scannable.rs  db.rs  embed.rs  emitters.rs  model_derive.rs  model_simple.rs  passwords.rs  responses.rs  router.rs  router_edge_cases.rs  service_extraction.rs  site.rs  validatable.rs  validators.rs  views.rs
uxar/tests/data/: products.sql
vyuh/: Cargo.toml
vyuh-bench/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
vyuh-bench/python/: t1_fastapi.py  t2_fastapi.py
vyuh-bench/python/drf_t2/: views.py
vyuh-bench/results/: summary.md
vyuh-bench/scripts/: charts.py  docker-run.sh  loc.py  report.py  run_bench.py
vyuh-bench/sql/: t1_sqlite.sql  t2_postgres.sql
vyuh-macros/: Cargo.toml
vyuh-macros/examples/: migration_evaluation.md
vyuh-macros/src/: assets.rs  bindable.rs  bitrole.rs  bundle.rs  bundlepart.rs  bundlepart_tests.rs  cron.rs  lib.rs  multipart.rs  openapi.rs  periodic.rs  pgnotify.rs  route.rs  scannable.rs  schemable.rs  schemable_tests.rs  service.rs  signal.rs  task.rs  validate.rs
vyuh/examples/: auth_api_key_openapi.rs  auth_basic.rs  auth_cookies.rs  auth_dynamic_permission.rs  auth_jwt_basic.rs  auth_roles_openapi.rs  auth_roles_static.rs  channels_auth.rs  channels_custom_backend.rs  channels_long_poll.rs  channels_publish_from_signal.rs  chatroom.rs  commands_basic.rs  commands_macro.rs  commands_reindex.rs  commands_site.rs  common.rs  console.rs  db_sqlx.rs  db_transactions.rs  emitters_cron.rs  emitters_direct.rs  emitters_periodic.rs  emitters_pgnotify.rs  emitters_pgnotify_burst_debounce.rs  logging_setup.rs  middlewares_basic.rs  middlewares_slashes.rs  openapi_basic.rs  routes_direct.rs  routes_json_post.rs  routes_validation.rs  services_basic.rs  services_direct.rs  showcase_routes_signals_emitters.rs  signals_basic.rs  signals_direct.rs  signals_emitters.rs  signals_macroless.rs  signals_multiple_handlers.rs  (+14 more)
vyuh/examples/auth/: api_key.rs  api_key_openapi.rs  basic.rs  cookies.rs  dynamic_permission.rs  jwt_basic.rs  roles_openapi.rs  roles_static.rs
vyuh/examples/channels/: auth.rs  custom_backend.rs  long_poll.rs  publish_from_signal.rs  sse.rs  websocket.rs
vyuh/examples/commands/: macro.rs  reindex.rs  site.rs
vyuh/examples/db/: basic.rs  raw_statement.rs  sqlx.rs  transactions.rs  writes.rs
vyuh/examples/emitters/: cron.rs  direct_api.rs  periodic.rs  pgnotify.rs  pgnotify_burst_debounce.rs
vyuh/examples/forum/: forum.md  forum.sql  main.py  main_rocket.rs  main_vyuh.rs
vyuh/examples/logging/: setup.rs
vyuh/examples/middlewares/: global.rs  path_normalization.rs
vyuh/examples/openapi/: basic.rs  responses.rs
vyuh/examples/routes/: json_post.rs  macroless.rs  reverse.rs  validation.rs
vyuh/examples/services/: concrete.rs  direct.rs  facade.rs  worker.rs
vyuh/examples/showcase/: routes_signals_emitters.rs
vyuh/examples/signals/: macroless.rs  multiple_handlers.rs  scheduled.rs  simple.rs
vyuh/examples/tasks/: concurrency.rs  macro.rs  macroless.rs  mysql.rs  sleep.rs  sqlite.rs  suspend_resume.rs
vyuh/examples/templates/: assets.rs  config.rs  datetime.rs  project.rs  route.rs
vyuh/examples/uploads/: basic.rs  large.rs  macroless.rs  validated.rs
vyuh/src/: assets.rs  auth.rs  beacon.rs  channels.rs  cmd.rs  conf.rs  debounce.rs  embed.rs  emitters.rs  errors.rs  layers.rs  lib.rs  logging.rs  middlewares.rs  notifiers.rs  prelude.rs  roles.rs  schedulers.rs  services.rs  signals.rs  site.rs  templates.rs  testing.rs  testing_tests.rs  validation.rs  validators.rs  watch.rs
vyuh/src/apidocs/: apidoc.rs  base.rs  mod.rs  schema.rs
vyuh/tests/: auth.rs  emitters.rs  passwords.rs  request_data_docs.rs  request_docs.rs  services.rs  task_stores.rs  uploads.rs  validatable.rs  validation_routes.rs  validators.rs
vyuh/web/: AGENTS.md  package-lock.json  package.json
(+336 files in other folders)
