[package]
name = "uxar-bins"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
chrono = {workspace = true}
indexmap = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
