[package]
name = "uxar-macros"
version = "0.1.1"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true


[dependencies]
include_dir = { version = "0.7.4", features = ["glob"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0.20"
heck = "0.4"

tokio = {workspace = true}

[dev-dependencies]
uxar = { path = "../uxar" }