[package]
name = "uxar-macros"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "Procedural macros for the uxar web framework"
readme = "../README.md"
repository = "https://github.com/vivsh/uxar"
documentation = "https://docs.rs/uxar-macros"

[lib]
proc-macro = true


[dependencies]
include_dir = { version = "0.7.4", features = ["glob"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0.20"
heck = "0.4"
cron = "0.12"

tokio = {workspace = true}

[dev-dependencies]
uxar = { path = "../uxar" }
trybuild = "1.0"