[package]
name = "uxar"
version = "0.1.4"
edition = "2024"
license = "MIT"

[dependencies]
argh = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
chrono = {workspace = true}
chrono-tz = "0.10"
cron = "0.12"
indexmap = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = {workspace = true}
sqlx = {workspace = true}
minijinja = { workspace = true, features = ["loader"] }
blake3 = {workspace = true}
dotenvy = {workspace = true}
tower = {workspace = true}
thiserror = {workspace = true}
mime_guess = "2.0.5"
url = "2.5.4"
async-trait = "0.1.88"
tower-http = {version="0.6.2", features=["catch-panic", "normalize-path", "fs"]}
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
jsonwebtoken = "9.3.1"
strum_macros = "0.27.1"
axum-jsonschema = "0.8.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
schemars = "1.0.4"
jsonschema = "0.30.0"
time = "0.3.41"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["regex", "serde", "env-filter", "parking_lot", "chrono", "serde_json"] }
http-serde = "2.1.1"
serde_urlencoded = "0.7"
rust-silos = "^0.2.8"

uxar-macros = { path = "../uxar-macros" }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
axum-test = "17.3.0"
notify = "^8.1"
futures = "0.3.31"
twox-hash = "1.6"
regex = "1.12.2"
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3"

