[package]
name = "uxar"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Opinionated Rust web framework built on Axum for Postgres-backed JSON APIs"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
argh = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
chrono = {workspace = true}
chrono-tz = "0.10"
cron = "0.12"
indexmap = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
smallvec = "1.13"
tokio = {workspace = true}
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = {workspace = true}
sqlx = {workspace = true}
minijinja = { workspace = true, features = ["loader"] }
blake3 = {workspace = true}
dotenvy = {workspace = true}
tower = {workspace = true}
thiserror = {workspace = true}
mime_guess = "2.0.5"
url = "2.5.4"
tower-http = {version="0.6.2", features=["catch-panic", "normalize-path", "fs"]}
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
jsonwebtoken = "9.3.1"
schemars = "1.0.4"
time = "0.3.41"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time", "ansi"] }
tracing-appender = "0.2"
tracing-log = "0.2"

http-serde = "2.1.1"
serde_urlencoded = "0.7"
rust-silos = {version="^0.3"}

uxar-macros = { path = "../uxar-macros", version = "0.1.3" }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
axum-test = "17.3.0"
notify = "^8.1"
futures = "0.3.31"
twox-hash = "1.6"
regex = "1.12.2"
parking_lot = "0.12.5"
openapiv3 = "2.2.0"
either = "1.15.0"
bytes = "1.8"
garde = "0.22.1"
openapiv3_1 = "0.1.3"
tokio-util = "0.7.18"
percent-encoding = "2.3.2"
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.46.1", features = ["full", "test-util"] }

