[package]
name = "vyuh-bench"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
vyuh-postgres = ["vyuh/postgres"]
vyuh-sqlite = ["vyuh/sqlite"]

[dependencies]
actix-web = "4.11.0"
async-stream = "0.3.6"
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.41", features = ["derive", "env"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json"] }
schemars = "1.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { workspace = true }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
vyuh = { path = "../vyuh", default-features = false }

[[bin]]
name = "t1_vyuh"
path = "src/bin/t1_vyuh.rs"
required-features = ["vyuh-sqlite"]

[[bin]]
name = "t2_vyuh"
path = "src/bin/t2_vyuh.rs"
required-features = ["vyuh-postgres"]
