[package]
name = "vyuh"
version = "0.2.7"
edition = "2024"
license = "MIT"
description = "Vyuh web framework for Axum and SQLx with handler-first APIs"
readme = "../README.md"
repository = "https://github.com/vivsh/vyuh"
documentation = "https://docs.rs/vyuh"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
cors = ["tower-http/cors"]
argon2 = ["dep:argon2"]

[dependencies]
axum = {workspace = true}
axum-extra = {workspace = true}
chrono = {workspace = true}
chrono-tz = "0.10"
cron = "0.12"
indexmap = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
smallvec = "1.13"
tokio = {workspace = true}
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = {workspace = true}
sqlx = {workspace = true}
minijinja = { workspace = true, features = ["loader"] }
blake3 = {workspace = true}
dotenvy = {workspace = true}
tower = {workspace = true}
thiserror = {workspace = true}
infer = {workspace = true}
mime_guess = "2.0.5"
url = "2.5.4"
tower-http = {version="0.6.2", features=["catch-panic", "compression-full", "cors", "fs", "trace"]}
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
jsonwebtoken = "9.3.1"
schemars = "1.0.4"
time = "0.3.41"

# Password hashing utilities (Django-compatible PBKDF2)
base64 = "0.21"
ring = "0.16"
argon2 = { version = "0.5", optional = true }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time", "ansi"] }
tracing-appender = "0.2"
tracing-log = "0.2"

http-serde = "2.1.1"
serde_urlencoded = "0.7"
rust-silos = {version="^0.3"}

vyuh-macros = { path = "../vyuh-macros", version = "0.2.7" }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
axum-test = "17.3.0"
notify = "^8.1"
futures = "0.3.31"
twox-hash = "1.6"
regex = "1.12.2"
parking_lot = "0.12.5"
openapiv3 = "2.2.0"
either = "1.15.0"
bytes = "1.8"
garde = "0.22.1"
openapiv3_1 = "0.1.3"
tokio-util = "0.7.18"
percent-encoding = "2.3.2"
sysinfo = "0.33"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full", "test-util"] }

[[example]]
name = "auth_api_key"
path = "examples/auth/api_key.rs"

[[example]]
name = "auth_api_key_openapi"
path = "examples/auth/api_key_openapi.rs"

[[example]]
name = "auth_basic"
path = "examples/auth/basic.rs"

[[example]]
name = "auth_cookies"
path = "examples/auth/cookies.rs"

[[example]]
name = "auth_dynamic_permission"
path = "examples/auth/dynamic_permission.rs"

[[example]]
name = "auth_jwt_basic"
path = "examples/auth/jwt_basic.rs"

[[example]]
name = "auth_roles_openapi"
path = "examples/auth/roles_openapi.rs"

[[example]]
name = "auth_roles_static"
path = "examples/auth/roles_static.rs"

[[example]]
name = "channels_auth"
path = "examples/channels/auth.rs"

[[example]]
name = "channels_custom_backend"
path = "examples/channels/custom_backend.rs"

[[example]]
name = "channels_long_poll"
path = "examples/channels/long_poll.rs"

[[example]]
name = "channels_publish_from_signal"
path = "examples/channels/publish_from_signal.rs"

[[example]]
name = "channels_sse"
path = "examples/channels/sse.rs"

[[example]]
name = "channels_websocket"
path = "examples/channels/websocket.rs"

[[example]]
name = "commands_macro"
path = "examples/commands/macro.rs"

[[example]]
name = "commands_reindex"
path = "examples/commands/reindex.rs"

[[example]]
name = "commands_site"
path = "examples/commands/site.rs"

[[example]]
name = "db_basic"
path = "examples/db/basic.rs"

[[example]]
name = "db_raw_statement"
path = "examples/db/raw_statement.rs"

[[example]]
name = "db_sqlx"
path = "examples/db/sqlx.rs"

[[example]]
name = "db_transactions"
path = "examples/db/transactions.rs"

[[example]]
name = "db_writes"
path = "examples/db/writes.rs"

[[example]]
name = "emitters_cron"
path = "examples/emitters/cron.rs"

[[example]]
name = "emitters_direct_api"
path = "examples/emitters/direct_api.rs"

[[example]]
name = "emitters_periodic"
path = "examples/emitters/periodic.rs"

[[example]]
name = "emitters_pgnotify"
path = "examples/emitters/pgnotify.rs"

[[example]]
name = "emitters_pgnotify_burst_debounce"
path = "examples/emitters/pgnotify_burst_debounce.rs"

[[example]]
name = "logging_setup"
path = "examples/logging/setup.rs"

[[example]]
name = "middlewares_global"
path = "examples/middlewares/global.rs"

[[example]]
name = "middlewares_path_normalization"
path = "examples/middlewares/path_normalization.rs"

[[example]]
name = "openapi_basic"
path = "examples/openapi/basic.rs"

[[example]]
name = "openapi_responses"
path = "examples/openapi/responses.rs"

[[example]]
name = "routes_json_post"
path = "examples/routes/json_post.rs"

[[example]]
name = "routes_macroless"
path = "examples/routes/macroless.rs"

[[example]]
name = "routes_reverse"
path = "examples/routes/reverse.rs"

[[example]]
name = "routes_validation"
path = "examples/routes/validation.rs"

[[example]]
name = "services_concrete"
path = "examples/services/concrete.rs"

[[example]]
name = "services_direct"
path = "examples/services/direct.rs"

[[example]]
name = "services_facade"
path = "examples/services/facade.rs"

[[example]]
name = "services_worker"
path = "examples/services/worker.rs"

[[example]]
name = "showcase_routes_signals_emitters"
path = "examples/showcase/routes_signals_emitters.rs"

[[example]]
name = "signals_macroless"
path = "examples/signals/macroless.rs"

[[example]]
name = "signals_multiple_handlers"
path = "examples/signals/multiple_handlers.rs"

[[example]]
name = "signals_scheduled"
path = "examples/signals/scheduled.rs"

[[example]]
name = "signals_simple"
path = "examples/signals/simple.rs"

[[example]]
name = "tasks_concurrency"
path = "examples/tasks/concurrency.rs"

[[example]]
name = "tasks_macro"
path = "examples/tasks/macro.rs"

[[example]]
name = "tasks_macroless"
path = "examples/tasks/macroless.rs"

[[example]]
name = "tasks_mysql"
path = "examples/tasks/mysql.rs"

[[example]]
name = "tasks_sleep"
path = "examples/tasks/sleep.rs"

[[example]]
name = "tasks_sqlite"
path = "examples/tasks/sqlite.rs"

[[example]]
name = "tasks_suspend_resume"
path = "examples/tasks/suspend_resume.rs"

[[example]]
name = "templates_assets"
path = "examples/templates/assets.rs"

[[example]]
name = "templates_config"
path = "examples/templates/config.rs"

[[example]]
name = "templates_datetime"
path = "examples/templates/datetime.rs"

[[example]]
name = "templates_project"
path = "examples/templates/project.rs"

[[example]]
name = "templates_route"
path = "examples/templates/route.rs"

[[example]]
name = "uploads_basic"
path = "examples/uploads/basic.rs"

[[example]]
name = "uploads_large"
path = "examples/uploads/large.rs"

[[example]]
name = "uploads_macroless"
path = "examples/uploads/macroless.rs"

[[example]]
name = "uploads_validated"
path = "examples/uploads/validated.rs"
